--- a/less/sb-admin-2.less
+++ b/less/sb-admin-2.less
@@ -28,9 +28,9 @@ body {
     }
 }
 
-// Navigation
+// Navigation  
 .navbar-top-links li a {
-    color: @gray-dark;
+    color: white;
 }
 
 // --Topbar
@@ -96,6 +96,8 @@ body {
 // --Sidebar
 
 .sidebar {
+    // background-color: @brand-info;
+
     .sidebar-nav.navbar-collapse {
         padding-left: 0;
         padding-right: 0;
@@ -401,7 +403,6 @@ body {
                 margin: 0;
             }
             p {
-                .serif-font;
                 font-style: italic;
                 font-size: 16px;
                 margin: 0;
@@ -445,7 +446,6 @@ body {
         }
         p.item-intro {
             margin: 20px 0 30px;
-            .serif-font;
             font-style: italic;
             font-size: 16px;
         }
